[gd_scene load_steps=111 format=2]

[ext_resource path="res://Streamling.gd" type="Script" id=1]
[ext_resource path="res://assets/lemming/walk/walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/lemming/walk/walk7.png" type="Texture" id=3]
[ext_resource path="res://assets/lemming/walk/walk4.png" type="Texture" id=4]
[ext_resource path="res://assets/lemming/walk/walk8.png" type="Texture" id=5]
[ext_resource path="res://assets/lemming/walk/walk5.png" type="Texture" id=6]
[ext_resource path="res://assets/lemming/walk/walk3.png" type="Texture" id=7]
[ext_resource path="res://assets/lemming/walk/walk2.png" type="Texture" id=8]
[ext_resource path="res://assets/lemming/walk/walk6.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/AvenuePixel-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground8.png" type="Texture" id=11]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground1.png" type="Texture" id=12]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground3.png" type="Texture" id=13]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground6.png" type="Texture" id=14]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground2.png" type="Texture" id=15]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground7.png" type="Texture" id=16]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground4.png" type="Texture" id=17]
[ext_resource path="res://assets/lemming/hit_ground/hit_ground5.png" type="Texture" id=18]
[ext_resource path="res://assets/lemming/umbrella/umbrella5.png" type="Texture" id=19]
[ext_resource path="res://assets/lemming/umbrella/umbrella9.png" type="Texture" id=20]
[ext_resource path="res://assets/lemming/umbrella/umbrella8.png" type="Texture" id=21]
[ext_resource path="res://assets/lemming/umbrella/umbrella4.png" type="Texture" id=22]
[ext_resource path="res://assets/lemming/umbrella/umbrella6.png" type="Texture" id=23]
[ext_resource path="res://assets/lemming/umbrella/umbrella7.png" type="Texture" id=24]
[ext_resource path="res://assets/lemming/umbrella/umbrella1.png" type="Texture" id=25]
[ext_resource path="res://assets/lemming/umbrella/umbrella2.png" type="Texture" id=26]
[ext_resource path="res://assets/lemming/umbrella/umbrella3.png" type="Texture" id=27]
[ext_resource path="res://assets/lemming/block/block1.png" type="Texture" id=28]
[ext_resource path="res://assets/lemming/block/block3.png" type="Texture" id=29]
[ext_resource path="res://assets/lemming/block/block4.png" type="Texture" id=30]
[ext_resource path="res://assets/lemming/block/block2.png" type="Texture" id=31]
[ext_resource path="res://assets/lemming/block/block5.png" type="Texture" id=32]
[ext_resource path="res://assets/lemming/block/block12.png" type="Texture" id=33]
[ext_resource path="res://assets/lemming/block/block16.png" type="Texture" id=34]
[ext_resource path="res://assets/lemming/block/block9.png" type="Texture" id=35]
[ext_resource path="res://assets/lemming/block/block15.png" type="Texture" id=36]
[ext_resource path="res://assets/lemming/block/block7.png" type="Texture" id=37]
[ext_resource path="res://assets/lemming/block/block11.png" type="Texture" id=38]
[ext_resource path="res://assets/lemming/block/block13.png" type="Texture" id=39]
[ext_resource path="res://assets/lemming/block/block10.png" type="Texture" id=40]
[ext_resource path="res://assets/lemming/block/block14.png" type="Texture" id=41]
[ext_resource path="res://assets/lemming/block/block8.png" type="Texture" id=42]
[ext_resource path="res://assets/lemming/block/block6.png" type="Texture" id=43]
[ext_resource path="res://assets/fx/out/BOUM8.png" type="Texture" id=44]
[ext_resource path="res://assets/fx/out/BOUM15.png" type="Texture" id=45]
[ext_resource path="res://assets/fx/out/BOUM4.png" type="Texture" id=46]
[ext_resource path="res://assets/fx/out/BOUM6.png" type="Texture" id=47]
[ext_resource path="res://assets/fx/out/BOUM1.png" type="Texture" id=48]
[ext_resource path="res://assets/fx/out/BOUM3.png" type="Texture" id=49]
[ext_resource path="res://assets/fx/out/BOUM5.png" type="Texture" id=50]
[ext_resource path="res://assets/fx/out/BOUM7.png" type="Texture" id=51]
[ext_resource path="res://assets/fx/out/BOUM11.png" type="Texture" id=52]
[ext_resource path="res://assets/fx/out/BOUM12.png" type="Texture" id=53]
[ext_resource path="res://assets/fx/out/BOUM13.png" type="Texture" id=54]
[ext_resource path="res://assets/fx/out/BOUM16.png" type="Texture" id=55]
[ext_resource path="res://assets/fx/out/BOUM17.png" type="Texture" id=56]
[ext_resource path="res://assets/fx/out/BOUM18.png" type="Texture" id=57]
[ext_resource path="res://assets/fx/out/BOUM9.png" type="Texture" id=58]
[ext_resource path="res://assets/fx/out/BOUM2.png" type="Texture" id=59]
[ext_resource path="res://assets/fx/out/BOUM14.png" type="Texture" id=60]
[ext_resource path="res://assets/fx/out/BOUM10.png" type="Texture" id=61]
[ext_resource path="res://StateMachine.gd" type="Script" id=62]
[ext_resource path="res://Walk.gd" type="Script" id=63]
[ext_resource path="res://Air.gd" type="Script" id=64]
[ext_resource path="res://Block.gd" type="Script" id=65]
[ext_resource path="res://Dig.gd" type="Script" id=66]
[ext_resource path="res://assets/lemming/dig/dig1.png" type="Texture" id=67]
[ext_resource path="res://assets/lemming/dig/dig2.png" type="Texture" id=68]
[ext_resource path="res://assets/lemming/dig/dig3.png" type="Texture" id=69]
[ext_resource path="res://assets/lemming/dig/dig4.png" type="Texture" id=70]
[ext_resource path="res://assets/lemming/dig/dig5.png" type="Texture" id=71]
[ext_resource path="res://assets/lemming/dig/dig15.png" type="Texture" id=72]
[ext_resource path="res://assets/lemming/dig/dig11.png" type="Texture" id=73]
[ext_resource path="res://assets/lemming/dig/dig16.png" type="Texture" id=74]
[ext_resource path="res://assets/lemming/dig/dig6.png" type="Texture" id=75]
[ext_resource path="res://assets/lemming/dig/dig7.png" type="Texture" id=76]
[ext_resource path="res://assets/lemming/dig/dig12.png" type="Texture" id=77]
[ext_resource path="res://assets/lemming/dig/dig13.png" type="Texture" id=78]
[ext_resource path="res://assets/lemming/dig/dig10.png" type="Texture" id=79]
[ext_resource path="res://assets/lemming/dig/dig8.png" type="Texture" id=80]
[ext_resource path="res://assets/lemming/dig/dig9.png" type="Texture" id=81]
[ext_resource path="res://assets/lemming/dig/dig14.png" type="Texture" id=82]
[ext_resource path="res://assets/ui/umbrella.png" type="Texture" id=83]
[ext_resource path="res://assets/fx/simple_light_100.png" type="Texture" id=84]
[ext_resource path="res://assets/lemming/air/air3.png" type="Texture" id=85]
[ext_resource path="res://assets/lemming/air/air5.png" type="Texture" id=86]
[ext_resource path="res://assets/lemming/air/air1.png" type="Texture" id=87]
[ext_resource path="res://assets/lemming/air/air2.png" type="Texture" id=88]
[ext_resource path="res://assets/lemming/air/air4.png" type="Texture" id=89]
[ext_resource path="res://assets/lemming/air/air6.png" type="Texture" id=90]
[ext_resource path="res://assets/lemming/air/air7.png" type="Texture" id=91]
[ext_resource path="res://assets/lemming/air/air8.png" type="Texture" id=92]
[ext_resource path="res://Die.gd" type="Script" id=93]
[ext_resource path="res://Out.gd" type="Script" id=94]
[ext_resource path="res://Build.gd" type="Script" id=95]
[ext_resource path="res://assets/lemming/build/build4.png" type="Texture" id=96]
[ext_resource path="res://assets/lemming/build/build1.png" type="Texture" id=97]
[ext_resource path="res://assets/lemming/build/build2.png" type="Texture" id=98]
[ext_resource path="res://assets/lemming/build/build3.png" type="Texture" id=99]
[ext_resource path="res://assets/lemming/build/build6.png" type="Texture" id=100]
[ext_resource path="res://assets/lemming/build/build8.png" type="Texture" id=101]
[ext_resource path="res://assets/lemming/build/build5.png" type="Texture" id=102]
[ext_resource path="res://assets/lemming/build/build7.png" type="Texture" id=103]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 48 ), ExtResource( 59 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 44 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 60 ), ExtResource( 45 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 42 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 36 ), ExtResource( 34 ) ],
"loop": true,
"name": "block",
"speed": 7.0
}, {
"frames": [ ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 96 ), ExtResource( 102 ), ExtResource( 100 ), ExtResource( 103 ), ExtResource( 101 ) ],
"loop": true,
"name": "build",
"speed": 8.0
}, {
"frames": [ ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 79 ), ExtResource( 73 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 82 ), ExtResource( 72 ), ExtResource( 74 ) ],
"loop": true,
"name": "dig",
"speed": 14.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": false,
"name": "umbrella",
"speed": 7.0
}, {
"frames": [ ExtResource( 87 ), ExtResource( 88 ), ExtResource( 85 ), ExtResource( 89 ), ExtResource( 86 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ) ],
"loop": true,
"name": "air",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 11 ) ],
"loop": false,
"name": "hit_ground",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.87113
height = 2.66795

[sub_resource type="DynamicFont" id=4]
size = 9
outline_size = 1
outline_color = Color( 0.882353, 0.294118, 0.294118, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 9
outline_size = 1
outline_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
font_data = ExtResource( 10 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 10, -9.8, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 8.96
tangential_accel_random = 0.25
scale = 0.5
scale_random = 1.0
color = Color( 0.360784, 0.360784, 0.360784, 1 )
hue_variation = -0.36
hue_variation_random = 0.9

[sub_resource type="Animation" id=7]
resource_name = "shrink"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 3.03144 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[node name="Streamling" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 29
script = ExtResource( 1 )

[node name="OutAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2.01921, -165.556 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="Animations" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walk"
frame = 1
playing = true
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Labels" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 0.674233
margin_top = -14.1997
margin_right = 40.6742
margin_bottom = 25.8003
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Labels"]
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
custom_constants/separation = -2

[node name="StateLabel" type="Label" parent="Labels/Rows"]
margin_right = 40.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 4 )
text = "State"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="HBoxContainer" parent="Labels/Rows"]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 12 )
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Labels/Rows/NameContainer"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 100, 5 )
custom_fonts/font = SubResource( 5 )
text = "feuertaufe0815"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UmbrellaIcon" type="TextureRect" parent="Labels/Rows/NameContainer"]
visible = false
margin_left = 41.0
margin_right = 50.0
margin_bottom = 12.0
texture = ExtResource( 83 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 62 )
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 63 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 64 )

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource( 65 )

[node name="Dig" type="Node" parent="StateMachine"]
script = ExtResource( 66 )

[node name="Build" type="Node" parent="StateMachine"]
script = ExtResource( 95 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 93 )

[node name="Out" type="Node" parent="StateMachine"]
script = ExtResource( 94 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 84 )
texture_scale = 0.2
energy = 0.7

[node name="DigParticles" type="Node2D" parent="."]
position = Vector2( 0, 2.70054 )

[node name="DigParticles1" type="Particles2D" parent="DigParticles"]
position = Vector2( 1.14905, 1.39212 )
emitting = false
amount = 10
lifetime = 0.9
one_shot = true
speed_scale = 2.0
process_material = SubResource( 6 )

[node name="DigParticles2" type="Particles2D" parent="DigParticles"]
position = Vector2( -0.994368, 1.39212 )
rotation = 3.14159
scale = Vector2( 1, -1 )
emitting = false
amount = 10
lifetime = 0.9
one_shot = true
speed_scale = 2.0
process_material = SubResource( 6 )

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shrink = SubResource( 7 )

[connection signal="animation_finished" from="OutAnimation" to="." method="_on_OutAnimation_animation_finished"]
[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
